packages/typ/tests/fixtures/diagnostics/0102_core_function_application_mismatch_09.ml
let consume_iota (x : int) : int = x
let _ = consume_iota true
